--- a/tenant-deleter.csproj
+++ b/tenant-deleter.csproj
@@ -7,8 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Graph" Version="4.0.0" />
-    <PackageReference Include="Microsoft.Identity.Client" Version="4.35.0" />
+    <PackageReference Include="Microsoft.Graph" Version="4.*" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.*" />
+    <PackageReference Include="Microsoft.Identity.Client.Extensions.Msal" Version="2.24.0" />
   </ItemGroup>
 
 </Project>
