--- a/.github/workflows/dotnet-release.yml
+++ b/.github/workflows/dotnet-release.yml
@@ -1,4 +1,4 @@
-name: .NET
+name: .NET build & release
 
 on:
   workflow_dispatch:
@@ -25,4 +25,4 @@ jobs:
       env:
         GHR_COMPRESS: xz
         GHR_PATH: out/
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
